Fix for white space above poem

--- a/atoms/default/client/css/_base.scss
+++ b/atoms/default/client/css/_base.scss
@@ -27,6 +27,10 @@ figure.element.element-image {
 }
 
 .content__main .content__main-column {
+  & > :last-child {
+    padding-bottom: calc(100vh - 1175px  - 280px);
+    margin-bottom: 32px;
+  }
   p, li, & {
     color: $text-main;
     a, & > a {
