--- a/atoms/default/client/css/_poem.scss
+++ b/atoms/default/client/css/_poem.scss
@@ -33,14 +33,25 @@
     margin-left: -260px;
     margin-right: -418px;
   }
+  .poem + & {
+    display: none;
+  }
+}
+
+.poem ~ p,
+.poem ~ aside,
+.poem ~ figure {
+  position: relative;
+  z-index: 12;
 }
 
 .poem {
   position: relative;
+  margin-bottom: 64px;
   &__images {
     position: sticky;
     top: 0;
-    height: 100vh;
+    height: #{"min(1175px, 100vh)"};
     z-index: 12;
 
     &__inner {
@@ -69,6 +80,34 @@
         right: -418px;
       }
 
+      &:before,
+      &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        z-index: 10;
+      }
+      // 4 lines
+      &:after {
+        bottom: -16px;
+        height: 16px;
+        background: repeating-linear-gradient(
+          rgba($text-main,0.25),
+          rgba($text-main,0.25) 1px,
+          rgba(255,0,0,0) 1px,
+          rgba(255,0,0,0) 5px,
+          rgba($text-main,0.25) 5px
+        );
+      }
+      // bottom blocker
+      &:before {
+        z-index: 9;
+        bottom: 0;
+        height: calc(100vh - 1175px);
+        transform: translateY(100%);
+      }
+
     }
     &__autumn,
     &__spring,
@@ -81,7 +120,7 @@
     img {
       width: 100%;
       height: 100vh;
-      max-height: 1000px;
+      max-height: 1175px;
       object-fit: cover;
       object-position: -17vh 50%;
       @include mq(mobileMedium) {
@@ -100,7 +139,7 @@
   &__inner {
     padding-bottom: 16vh;
     padding-left: 50px;
-    margin-top: -25vh;
+    margin-top: -50vh;
 
     @include mq(mobileMedium) {
       padding-left: 60px;
